<resources>
    <string name="app_name">Mywork1</string>
    <string name="count_down_to_election_day">Count Down To Election Day</string>
    <string name="imagebg" translatable="false">imagebg</string>
    <string name="_365" translatable="false">365</string>
    <string name="_24" translatable="false">24</string>
    <string name="_60" translatable="false">60</string>
    <string name="_601" translatable="false">60</string>
    <string name="center" translatable="false">สำนักงานคณะกรรมการการเลือกตั้ง</string>
    <string name="election_commission_of_thailand" translatable="false">ELECTION COMMISSION OF THAILAND</string>
    <string name="next">Next</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="dayimg" translatable="false">dayimg</string>
    <string name="secimg" translatable="false">secimg</string>
    <string name="minimg" translatable="false">minimg</string>
    <string name="hourimg" translatable="false">hourimg</string>
    <string name="vote" translatable="false">vote</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="thaiid" translatable="false">กรอกเลขบัตรประชาชน</string>
    <string name="checkstatus" translatable="false">ตรวจสอบสิทธิเลือกตั้ง</string>
    <string name="shownot13" translatable="false">กรุณากรอกหมายเลขบัตรประชาชน 13 หลัก</string>
</resources>